--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - distro: ubuntu-latest
+          - distro: ubuntu:latest
             package: deb
-          - distro: fedora-latest
+          - distro: fedora:latest
             package: rpm
-          - distro: archlinux:latest
+          - distro: archlinux:base
             package: pkg.tar.zst
 
     container:
@@ -27,9 +27,9 @@ jobs:
       
       - name: Install dependencies
         run: |
-          if [ "${{ matrix.distro }}" = "ubuntu-latest" ]; then
+          if [ "${{ matrix.distro }}" = "ubuntu:latest" ]; then
             apt-get update && apt-get install -y curl git cmake ninja-build clang pkg-config libgtk-3-dev dpkg-dev
-          elif [ "${{ matrix.distro }}" = "fedora-latest" ]; then
+          elif [ "${{ matrix.distro }}" = "fedora:latest" ]; then
             dnf install -y curl git cmake ninja-build clang pkg-config gtk3-devel rpm-build
           else
             pacman -Syu --noconfirm curl git cmake ninja clang pkg-config gtk3 base-devel
