--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - distro: ubuntu:latest
+          - distro: ubuntu:22.04
             package: deb
-          - distro: fedora:latest
+          - distro: fedora:39
             package: rpm
-          - distro: archlinux:base
+          - distro: archlinux:base-devel
             package: pkg.tar.zst
 
     container:
@@ -27,21 +27,34 @@ jobs:
       
       - name: Install dependencies
         run: |
-          if [ "${{ matrix.distro }}" = "ubuntu:latest" ]; then
-            apt-get update && apt-get install -y curl git cmake ninja-build clang pkg-config libgtk-3-dev dpkg-dev
-          elif [ "${{ matrix.distro }}" = "fedora:latest" ]; then
-            dnf install -y curl git cmake ninja-build clang pkg-config gtk3-devel rpm-build
+          if [ "${{ matrix.distro }}" = "ubuntu:22.04" ]; then
+            apt-get update
+            DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+              curl git cmake ninja-build clang pkg-config libgtk-3-dev dpkg-dev \
+              xz-utils
+          elif [ "${{ matrix.distro }}" = "fedora:39" ]; then
+            dnf clean all
+            dnf makecache
+            dnf install -y --setopt=install_weak_deps=False \
+              curl git cmake ninja-build clang pkg-config gtk3-devel rpm-build \
+              findutils which xz
           else
-            pacman -Syu --noconfirm curl git cmake ninja clang pkg-config gtk3 base-devel
+            pacman -Syu --noconfirm
+            pacman -S --noconfirm --needed \
+              curl git cmake ninja clang pkg-config gtk3 base-devel xz
           fi
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          cache: true
           
       - name: Install Flutter dependencies
-        run: flutter pub get
+        run: |
+          flutter config --no-analytics
+          flutter doctor -v
+          flutter pub get
         
       - name: Build Linux
         run: flutter build linux --release
