--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,17 @@ jobs:
             apt-get update
             DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
               curl git cmake ninja-build clang pkg-config libgtk-3-dev dpkg-dev \
-              xz-utils jq unzip zip
+              xz-utils jq unzip zip wget ca-certificates \
+              libglu1-mesa fonts-droid-fallback python3
           elif [ "${{ matrix.distro }}" = "fedora:39" ]; then
             # First install minimal required packages
             dnf clean all
             dnf makecache
             dnf install -y --setopt=install_weak_deps=False \
-              curl git jq unzip zip findutils which xz
+              curl git jq unzip zip findutils which xz wget ca-certificates \
+              mesa-libGLU python3
 
-            # Then install development packages one by one to avoid dependency issues
+            # Then install development packages one by one
             dnf install -y --setopt=install_weak_deps=False cmake
             dnf install -y --setopt=install_weak_deps=False ninja-build
             dnf install -y --setopt=install_weak_deps=False clang
@@ -49,23 +51,28 @@ jobs:
           else
             pacman -Syu --noconfirm
             pacman -S --noconfirm --needed \
-              curl git cmake ninja clang pkg-config gtk3 base-devel xz jq unzip zip
-          fi
+              curl git cmake ninja clang pkg-config gtk3 base-devel xz jq unzip zip \
+              wget ca-certificates mesa python
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          cache: true
-          
+      - name: Download Flutter SDK
+        run: |
+          wget https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.19.2-stable.tar.xz
+          tar xf flutter_linux_3.19.2-stable.tar.xz
+          export PATH="$PATH:`pwd`/flutter/bin"
+          flutter precache
+          flutter doctor -v
+
       - name: Install Flutter dependencies
         run: |
+          export PATH="$PATH:`pwd`/flutter/bin"
           flutter config --no-analytics
           flutter doctor -v
           flutter pub get
         
       - name: Build Linux
-        run: flutter build linux --release
+        run: |
+          export PATH="$PATH:`pwd`/flutter/bin"
+          flutter build linux --release
 
       - name: Package Application
         run: |
