--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.1.1
-  shared_preferences: ^2.2.2
-  path_provider: ^2.1.1
-  path: ^1.8.3
-  http: ^1.1.0
+  provider: ^6.0.5
+  shared_preferences: ^2.1.1
+  path_provider: ^2.0.15
+  path: 1.8.3
+  http: ^0.13.6
   file_picker: ^5.3.1
   uuid: ^3.0.7
 
