--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.6
   file_picker: ^5.3.1
   uuid: ^3.0.7
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
