--- a/.github/workflows/arch_build.yml
+++ b/.github/workflows/arch_build.yml
@@ -27,6 +27,9 @@ jobs:
         tar xf flutter_linux_3.19.3-stable.tar.xz -C /opt
         ln -s /opt/flutter/bin/flutter /usr/local/bin/flutter
         ln -s /opt/flutter/bin/dart /usr/local/bin/dart
+        # Fix git ownership issue
+        git config --global --add safe.directory /opt/flutter
+        git config --global --add safe.directory '*'
         # Set permissions
         chmod -R a+rw /opt/flutter
         # Install dependencies for Flutter
@@ -36,6 +39,12 @@ jobs:
       run: |
         export PATH="/opt/flutter/bin:$PATH"
         flutter config --no-analytics
+        # Initialize Flutter
+        cd /opt/flutter
+        git checkout stable
+        git pull
+        flutter precache
+        cd -
         flutter doctor
         flutter config --enable-linux-desktop
 
@@ -53,6 +62,7 @@ jobs:
 
     - name: Build project
       run: |
+        export PATH="/opt/flutter/bin:$PATH"
         flutter pub get
         flutter build linux --release
 
