--- a/.github/workflows/arch_build.yml
+++ b/.github/workflows/arch_build.yml
@@ -22,6 +22,9 @@ jobs:
       run: |
         pacman -Syu --noconfirm
         pacman -S --noconfirm git base-devel sudo curl unzip xz
+        # Configure git
+        git config --global user.email "jon@crownparkcomputing.com"
+        git config --global user.name "Jon @ Crown Park Computing"
         # Install Flutter directly
         curl -O https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.19.3-stable.tar.xz
         tar xf flutter_linux_3.19.3-stable.tar.xz -C /opt
